--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -1,7 +1,4 @@
 cacheUrl: https://coco-022.github.io/osmos-feed_test/cache.json
 sources:
-  - href: https://otakusokuhou.com/index.rdf
-  # - href: https://github.com/osmoscraft/osmosfeed/releases.atom # Get new feature announcement via this feed
-  # - href: https://css-tricks.com/feed/
-  # - href: https://www.smashingmagazine.com/feed/
+  # - href: https://otakusokuhou.com/index.rdf
   - href: https://www.freecodecamp.org/news/rss/
