--- a/osmosfeed.yaml
+++ b/osmosfeed.yaml
@@ -4,3 +4,4 @@ sources:
   - href: https://pokemon.game-chan.net/feed
   - href: https://pokemon.gamerstand.net/feed
   - href: https://www.freecodecamp.org/news/rss/
+  - href: http://pokemonunite.blog.jp/index.rdf
